--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
             chapters/appendix/meetings/meeting17.typ
       - run: mkdir out
       - run: mv index.html out/
-      - run: mv /utils/build-time.js out/
+      - run: mv utils/build-time.js out/
       - run: mv main.pdf out/upsi_doc.pdf
       - run: mv chapters/appendix/meetings/meeting*.pdf out/
       - uses: actions/upload-pages-artifact@v1
