change build time format

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - run: echo "export const buildTime = '$(TZ="Europe/Berlin" date +"%Y-%m-%d %H:%M:%S")'" > utils/build-time.js
+      - run: echo "export const buildTime = '$(TZ="Europe/Berlin" date +"%d.%m.%Y %H:%M:%S")'" > utils/build-time.js
       - uses: lvignoli/typst-action@main
         with:
           source_file: |
