--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       - run: mv utils/build-time.js out/
       - run: mv main.pdf out/upsi_doc_full.pdf
       - run: mv chapters/appendix/meetings/meeting*.pdf out/
-      - run: echo "#let documentVersion = 'public'" > utils/document-version.typ
+      - run: echo '#let documentVersion = "public"' > utils/document-version.typ
       - uses: lvignoli/typst-action@main
         with:
           source_file: main.typ
