linux install arial

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: echo "export const buildTime = '$(TZ="Europe/Berlin" date +"%d.%m.%Y %H:%M:%S")'" > utils/build-time.js
-      - run: typst --font-path fonts/
+      - run: apt install ttf-mscorefonts-installer
       - uses: lvignoli/typst-action@main
         with:
           source_file: |
