--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,24 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+# install fonts
+      - run: apt-get update
+      - run: apt-get install -y --no-install-recommends software-properties-common curl wget cabextract
+      - run: apt-add-repository multiverse
+      - run: apt-get update
+
+      - run: wget https://www.freedesktop.org/software/fontconfig/webfonts/webfonts.tar.gz
+      - run: tar -xzf webfonts.tar.gz
+      - run: cabextract msfonts/*.exe
+      - run: cp  *.ttf  *.TTF /usr/local/share/fonts/
+      - run: fc-cache -f -v
+      - run: fc-match Arial
+
+# set build time on dashboard
       - run: echo "export const buildTime = '$(TZ="Europe/Berlin" date +"%d.%m.%Y %H:%M:%S")'" > utils/build-time.js
+
+# build full version pdf
       - uses: lvignoli/typst-action@main
         with:
           source_file: |
@@ -37,11 +54,15 @@ jobs:
       - run: mv utils/build-time.js out/
       - run: mv main.pdf out/upsi_doc_full.pdf
       - run: mv chapters/appendix/meetings/meeting*.pdf out/
+
+# build public version pdf
       - run: echo '#let documentVersion = "public"' > utils/document-version.typ
       - uses: lvignoli/typst-action@main
         with:
           source_file: main.typ
       - run: mv main.pdf out/upsi_doc_public.pdf
+
+# upload docs to github pages
       - uses: actions/upload-pages-artifact@v1
         with: { path: 'out' }
 
