--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/checkout@v3
 
 # install fonts
-      - run: apt-get update
-      - run: apt-get install -y --no-install-recommends software-properties-common curl wget cabextract
-      - run: apt-add-repository multiverse
-      - run: apt-get update
+      - run: sudo apt-get update
+      - run: sudo apt-get install -y --no-install-recommends software-properties-common curl wget cabextract
+      - run: sudo apt-add-repository multiverse
+      - run: sudo apt-get update
 
       - run: wget https://www.freedesktop.org/software/fontconfig/webfonts/webfonts.tar.gz
       - run: tar -xzf webfonts.tar.gz
