more font stuff

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,11 @@ jobs:
       - run: sudo fc-cache -f -v
       - run: sudo fc-match Arial
 
+      - run: sudo echo "ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true" | debconf-set-selections
+      - run: sudo apt-get install -y --no-install-recommends fontconfig ttf-mscorefonts-installer
+      - run: sudo cp localfonts.conf /etc/fonts/local.conf
+      - run: sudo fc-cache -f -v
+
 # set build time on dashboard
       - run: echo "export const buildTime = '$(TZ="Europe/Berlin" date +"%d.%m.%Y %H:%M:%S")'" > utils/build-time.js
 
