--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,22 +12,24 @@ jobs:
       - uses: actions/checkout@v3
 
 # install fonts
-      - run: sudo apt-get update
-      - run: sudo apt-get install -y --no-install-recommends software-properties-common curl wget cabextract
-      - run: sudo apt-add-repository multiverse
-      - run: sudo apt-get update
-
-      - run: sudo wget https://www.freedesktop.org/software/fontconfig/webfonts/webfonts.tar.gz
-      - run: sudo tar -xzf webfonts.tar.gz
-      - run: sudo cabextract msfonts/*.exe
-      - run: sudo cp  *.ttf  *.TTF /usr/local/share/fonts/
-      - run: sudo fc-cache -f -v
-      - run: sudo fc-match Arial
+#      - run: sudo apt-get update
+#      - run: sudo apt-get install -y --no-install-recommends software-properties-common curl wget cabextract
+#      - run: sudo apt-add-repository multiverse
+#      - run: sudo apt-get update
+#
+#      - run: sudo wget https://www.freedesktop.org/software/fontconfig/webfonts/webfonts.tar.gz
+#      - run: sudo tar -xzf webfonts.tar.gz
+#      - run: sudo cabextract msfonts/*.exe
+#      - run: sudo cp  *.ttf  *.TTF /usr/local/share/fonts/
+#      - run: sudo fc-cache -f -v
+#      - run: sudo fc-match Arial
 
       - run: echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | sudo debconf-set-selections
+      - run: echo ttf-mscorefonts-installer msttcorefonts/present-mscorefonts-eula note | sudo debconf-set-selections
       - run: sudo apt-get install -y --no-install-recommends fontconfig ttf-mscorefonts-installer
       - run: sudo cp localfonts.conf /etc/fonts/local.conf
       - run: sudo fc-cache -f -v
+
 
 # set build time on dashboard
       - run: echo "export const buildTime = '$(TZ="Europe/Berlin" date +"%d.%m.%Y %H:%M:%S")'" > utils/build-time.js
