--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
 # set build time on dashboard
       - run: echo "export const buildTime = '$(TZ="Europe/Berlin" date +"%d.%m.%Y %H:%M:%S")'" > utils/build-time.js
 
-# move meetings minutes to root to use other components
+# copy meetings minutes to root to use other components
       - run: cp chapters/appendix/meetings/meeting*.typ ./
 
 # build full version pdf
