--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,20 @@ jobs:
         with:
           source_file: |
             main.typ
+
+# build public version pdf
+      - run: echo '#let documentVersion = "public"' > utils/document-version.typ
+      - uses: lvignoli/typst-action@main
+        with:
+          source_file: main.typ
+      - run: mv main.pdf out/upsi_doc_public.pdf
+
+# build meetings minutes
+      - run: echo '#let documentVersion = "meetings"' > utils/document-version.typ
+      - run: cp chapters/appendix/meetings/meeting*.typ ./
+      - uses: lvignoli/typst-action@main
+        with:
+          source_file: |
             meeting01.typ
             meeting02.typ
             meeting03.typ
@@ -36,24 +50,13 @@ jobs:
             meeting15.typ
             meeting16.typ
             meeting17.typ
+
+# upload docs to github pages
       - run: mkdir out
       - run: mv index.html out/
       - run: mv utils/build-time.js out/
       - run: mv main.pdf out/upsi_doc_full.pdf
       - run: mv meeting*.pdf out/
-
-# build public version pdf
-      - run: echo '#let documentVersion = "public"' > utils/document-version.typ
-      - uses: lvignoli/typst-action@main
-        with:
-          source_file: main.typ
-      - run: mv main.pdf out/upsi_doc_public.pdf
-
-# build meetings minutes
-      - run: echo '#let documentVersion = "meetings"' > utils/document-version.typ
-      - run: cp chapters/appendix/meetings/meeting*.typ ./
-
-# upload docs to github pages
       - uses: actions/upload-pages-artifact@v1
         with: { path: 'out' }
 
